# finance-tracker

./: .gitignore  README.md  dist.env  pyproject.toml
config/: asgi.py  celery.py  env.py  settings.py  urls.py
config/settings/: base.py  development.py  logging.py
static/css/: styles.css
static/js/: messages.js
templates/: base.html
templates/account/: account_inactive.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html
templates/partials/: header.html  messages.html
tracker/: admin.py  choices.py  consumers.py  filters.py  forms.py  managers.py  models.py  resources.py  signals.py  tasks.py  urls.py  utils.py  views.py
tracker/management/commands/: generate_transactions.py
tracker/migrations/: 0001_initial.py  0002_category_created_at_category_type_and_more.py  0002_initial.py  0003_alter_category_name_and_more.py
tracker/static/tracker/js/: dependent_dropdown.js  transaction_chart.js  validation.js
tracker/templates/tracker/: category_delete.html  category_form.html  index.html  manage.html  transaction_chart.html  transaction_delete.html  transaction_form.html  transaction_list.html  transaction_statistics.html  transaction_total_statistics.html
tracker/templates/tracker/partials/: category_table_row.html  transaction_container.html  transaction_export_form.html  (+1 more)
tracker/tests/: factories.py  test_forms.py  test_managers.py  test_models.py  test_views.py
users/: admin.py  factories.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_email.py
(+10 files in other folders)
