[tool.poetry]
name = "django-finance-tracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = ">=4.2,<5.0"
django-crispy-forms = "^2.3"
django-allauth = "^65.0.2"
django-filter = "^24.3"
django-htmx = "^1.19.0"
faker = "^30.1.0"
crispy-bootstrap5 = "^2024.2"


[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.4.6"
django-extensions = "^3.2.3"
ruff = "^0.6.8"
ipython = "^8.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
